# Jed-fugitive

./: .gitignore  ALIGNMENT_SYSTEM.md  CRAFTING_IMPLEMENTATION_STATUS.md  CRAFTING_SYSTEM.md  DROP_ITEM_IMPLEMENTATION.md  EQUIPMENT_DROP_UPDATE.md  FORCE_ABILITIES_REFERENCE.md  FORCE_SYSTEM_REDESIGN.md  GAME_SUMMARY.md  KEY_BINDINGS.md  LOADING_SCREEN_ENHANCEMENT.md  OPTIMAL_PATH_ANALYSIS.md  PHASE1_IMPLEMENTATION.md  PROGRESSION_SYSTEM.md  README.md  README_BUILD.md  SILQ_GUI_REFERENCE.md  SIMULATION_RESULTS.md  STRESS_SYSTEM_REVISION.md  TOMB_CRASH_FIX.md  VICTORY_SYSTEM_IMPLEMENTATION.md  WEAPON_DROPS.md  WEAPON_REBALANCE_SUMMARY.md  WEAPON_SYSTEM.md  headless_smoke.out  pyproject.toml  requirements-build.txt  requirements.txt
.github/: copilot-instructions.md
docs/: AI_ENHANCEMENT_SUMMARY.md  ALIGNMENT_NARRATIVE.md  ENEMY_FIELD_GUIDE.md  INTEGRATION_GUIDE.py
scripts/: analyze_stress_system.py  batch_inquisitor_sim.py  batch_inquisitor_sim_minimal.py  build_mac.sh  build_windows.ps1  check_everything.py  check_intro.py  debug_inspect_flow.py  debug_tomb_crash.py  demo_ai_showcase.py  demo_sith_encounter.py  evaluate_balance.py  force_inquisitor_smoke.py  headless_smoke.py  list_items.py  optimal_path_simulation.py  sample_tomb_spawn.py  show_ending_screens.py  simulate_dps.py  test_alignment_narrative.py  test_artifact_pickup.py  test_compass_scan.py  test_death_screen.py  test_diverse_enemies.py  test_drop_item.py  test_drop_pickup_cycle.py  test_equip_flow.py  test_equip_stats.py  test_equipment_drops.py  test_equipment_flow.py  test_gameplay_weapons.py  (+29 more)
(+48 files in other folders)
